# strands

./: .gitignore  Cargo.toml  README.md  metrics.db  package-lock.json  reading-guide.md  tasks.toml
.github/actions/: metrics.yaml
demo/: doc.md
filament/: Cargo.toml
filament-sys/: Cargo.toml  README.md  build.rs
filament-sys/include/: filament.h  filament_std.h
filament-sys/spec/: filament-0.1.0.md
filament/spec/: filament-0.2.0.md
filament/src/: lib.rs  sys.rs
strands-derive/src/: lib.rs
strands-dev/src/: cli.ts
strands-dev/src/commands/: example.ts
strands-grafana/: DASHBOARD_CHEAT_SHEET.md  docker-compose.yaml  goals.yaml
strands-grafana/provisioning/dashboards/: health.json  triage.json
strands-grafana/provisioning/dashboards/general/: health.json
strands-grafana/provisioning/dashboards/sdks/: evals.json  python-sdk.json  typescript-sdk.json
strands-kt/examples-java/: build.gradle.kts
strands-kt/examples-java/src/main/java/: Calculator.java
strands-kt/examples-kt/: build.gradle.kts
strands-kt/examples-kt/src/main/kotlin/: Calculator.kt
strands-metrics/: Cargo.toml  metrics.db
strands-metrics/src/: aggregates.rs  client.rs  db.rs  goals.rs  main.rs
strands-py/: pyproject.toml
strands-py/strands/_generated/: __init__.py  strands.py
strands-py/strands/agent/: __init__.py
strands-rs/: Cargo.toml
strands-rs/src/: lib.rs  uniffi_bridge.rs
strands-sys/: Cargo.toml  README.md  build.rs
strands-sys/include/: strands.h  strands_core.h  strands_std.h  strands_std_structs.h
strands-sys/spec/: strands.md
strands-wasm/: package.json
strands/include/: strands.h  strands_std.h
strands/spec/: strands.md
