[package]
name = "strands"
description = "Unofficial Rust implementation of Strands SDK"
authors = ["Chay Nabors (chaynabors@gmail.com)"]
license = "MIT OR Apache-2.0"
version = "0.2.1"
edition = "2024"
publish = true

[features]
serde = ["dep:serde"]

[dependencies]
anthropik = "0.1.2"
async-stream = "0.3.6"
async-trait = "0.1.89"
futures = { version = "0.3.31" }
reqwest = "0.13.1"
rmcp = { version = "0.12.0", features = ["base64", "client", "macros", "server", "transport-async-rw", "transport-child-process", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"], default-features = false }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "io-std", "tracing", "fs", "macros"] }
tracing = "0.1.44"

[dev-dependencies]
anyhow = "1.0.100"
tracing-subscriber = "0.3.22"
