[package]
name = "strands"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
futures-core.workspace = true
serde_json.workspace = true
strands-derive.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing.workspace = true
uniffi = { workspace = true, features = ["tokio"] }
wasmtime = { workspace = true, features = ["component-model", "async"] }
wasmtime-wasi.workspace = true
wasmtime-wasi-http.workspace = true

[build-dependencies]
anyhow.workspace = true
wasmtime = { workspace = true, features = ["component-model", "async"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream.workspace = true
tracing-subscriber.workspace = true

[[example]]
name = "calculator"
path = "examples/calculator.rs"

[lints]
workspace = true
